Fix: Security audit - 81 bugs fixed across all controllers Comprehensive security audit and bug fixes covering: CRITICAL (23 bugs fixed): - SQL injection vulnerabilities in multiple controllers - DoS protection via rate limiting - Authentication gaps in financial endpoints - LGPD compliance logging - Input validation bypasses IMPORTANT (32 bugs fixed): - Missing authentication on admin operations - Inadequate rate limiting - Frontend validation issues - GPS coordinate processing bugs - Token handling improvements MODERATE (26 bugs fixed): - Code organization and documentation - Error message improvements - Logging enhancements - Configuration management Controllers audited and fixed: - AuthController: Token validation, role integrity - CompraViagemController: SOAP purchase protection - PacoteController: SQL injection, LGPD logging - ProgressController: DoS protection, auth - SemPararController: Rate limiting, validation - TransporteController: SQL injection, validation - MapController: DoS protection - And 11 more controllers Documentation reorganized into: - docs/audits/ - Audit reports - docs/bug-fixes/ - Fix documentation - docs/analysis/ - Deep analysis - docs/security/ - Security alerts - docs/summaries/ - Progress summaries

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,44 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 VITE_API_BASE_URL=
 VITE_MAPBOX_ACCESS_TOKEN=
+
+# NDD Cargo API Configuration
+# Integração para roteirizador e gestão de vale pedágio
+# @see docs/integracoes/ndd-cargo/README.md
+
+# Ambiente: homologacao ou producao
+NDD_CARGO_ENVIRONMENT=homologacao
+
+# Endpoint SOAP (opcional, usa environment se não definido)
+# NDD_CARGO_ENDPOINT_URL=https://homologa.nddcargo.com.br/wsagente/ExchangeMessage.asmx
+
+# Credenciais (fornecidas pela NDD Cargo)
+NDD_CARGO_CNPJ=17359233000188
+NDD_CARGO_TOKEN=2342bbkjkh23423bn2j3n42a
+
+# Certificado Digital A1 (ICP-Brasil)
+# Tipo: pfx (arquivo .pfx) ou pem (arquivos .pem separados)
+NDD_CARGO_CERT_TYPE=pfx
+NDD_CARGO_CERT_PFX_PATH=storage/certificates/nddcargo/cert.pfx
+NDD_CARGO_CERT_CERT_PATH=storage/certificates/nddcargo/cert_cert.pem
+NDD_CARGO_CERT_KEY_PATH=storage/certificates/nddcargo/cert_key.pem
+NDD_CARGO_CERT_PASSWORD=
+
+# Versão da API (layout XML)
+NDD_CARGO_VERSAO_LAYOUT=4.2.12.0
+
+# Timeout em segundos para requisições SOAP
+NDD_CARGO_TIMEOUT=60
+
+# Cache de rotas (em segundos, 24h = 86400)
+NDD_CARGO_CACHE_ENABLED=true
+NDD_CARGO_CACHE_ROTAS_TTL=86400
+
+# Logging
+NDD_CARGO_LOG_XML=false
+NDD_CARGO_LOG_RESPONSES=true
+NDD_CARGO_LOG_LEVEL=info
+
+# Rate Limiting (requisições por minuto)
+NDD_CARGO_RATE_LIMIT=60
+NDD_CARGO_TEST_RATE_LIMIT=10
